Request optimization, fixed cover display for clients and modified manga struct.

--- a/templates/manga.gohtml
+++ b/templates/manga.gohtml
@@ -1,6 +1,6 @@
 {{define "staticPath"}}../static{{end}}
 
-{{define "title"}}MangaThorg - {{.Manga.Attributes.Title.En}}{{end}}
+{{define "title"}}MangaThorg - {{.Title}}{{end}}
 
 {{define "cssFile"}}manga{{end}}
 
@@ -9,47 +9,47 @@
         <!-- Manga Banner -->
 <div class="manga-presentation">
     <div class="manga-banner">
-        <img class="background-img" src="https://uploads.mangadex.org/covers/{{.Manga.Id}}/{{.Cover.Attributes.FileName}}" alt="{{.Manga.Attributes.Title.En}}" />
+        <img class="background-img" src="/covers/{{.Id}}/{{.CoverImg}}" alt="{{.Title}}" />
         <div class="banner-text">
-            <div class="manga-title">{{.Manga.Attributes.Title.En}}</div>
+            <div class="manga-title">{{.Title}}</div>
             <div class="manga-attributes">
                 <div class="attribute">
                     <div class="attribute-label">Author</div>
-                    <div class="div-attr-ctn"><div class="attr-text">Author{{/*<Author Name>*/}}</div></div>
+                    <div class="div-attr-ctn"><div class="attr-text">{{.Author}}</div></div>
                 </div>
                 <div class="attribute">
                     <div class="attribute-label">Status</div>
-                    <div class="div-attr-ctn"><div class="attr-text">{{.Manga.Attributes.Status}}</div></div>
+                    <div class="div-attr-ctn"><div class="attr-text">{{.Status}}</div></div>
                 </div>
                 <div class="attribute">
                     <div class="attribute-label">Public</div>
-                    <div class="div-attr-ctn"><div class="attr-text">{{.Manga.Attributes.PublicationDemographic}}</div></div>
+                    <div class="div-attr-ctn"><div class="attr-text">{{if .PublicationDemographic}}{{.PublicationDemographic}}{{else}}None{{end}}</div></div>
                 </div>
                 <div class="attribute">
                     <div class="attribute-label">Rating</div>
                     <div class="rating-tag">
                         <img class="icon-star-outline" src="img/icon-star-outline.png" />
-                        <div class="attr-text">{{.Stat.Rating.Bayesian}}</div>
+                        <div class="attr-text">{{.Rating}}</div>
                     </div>
                 </div>
             </div>
-            <a href="/chapter/{{.Manga.Attributes.LatestUploadedChapter}}" class="manga-read-btn">
-                <div class="manga-read-btn-text">Read to {{.Manga.Attributes.LastChapter}}</div>
+            <a href="/chapter/{{.FirstChapterId}}" class="manga-read-btn">
+                <div class="manga-read-btn-text">Begin reading</div>
                 <img class="icon-menu-book" src="img/icon-menu-book.svg"  alt="read-to logo"/>
             </a>
         </div>
         <a href="" class="manga-remove"><img class="bookmark-remove" src="img/bookmark-remove.png" /></a>
     </div>
     <div class="manga-card-ctn-abs">
-        <div class="manga-card"><img class="manga-card-img" src="https://uploads.mangadex.org/covers/{{.Manga.Id}}/{{.Cover.Attributes.FileName}}" alt="{{.Manga.Attributes.Title.En}}" /></div>
+        <div class="manga-card"><img class="manga-card-img" src="/covers/{{.Id}}/{{.CoverImg}}" alt="{{.Title}}" /></div>
     </div>
     <div class="manga-info">
         <div class="manga-description">
             <p>
-                {{.Manga.Attributes.Description.En}}
+                {{.Description}}
             </p>
             <div class="manga-tag-list">
-                {{range .Manga.Attributes.Tags}}
+                {{range .Tags}}
                     <a href="/category/{{.Id}}" class="manga-tag"><div class="manga-tag-text">{{.Attributes.Name.En}}</div></a>
                 {{end}}
             </div>
@@ -70,7 +70,7 @@
     <div class="chapters-list">
         {{range .Chapters}}
             <div class="chapter">
-                <p class="chapter-title">{{.Attributes.Title}} {{.Attributes.Chapter}}</p>
+                <p class="chapter-title">Ch. {{.Attributes.Chapter}}{{if .Attributes.Title}}: {{.Attributes.Title}}{{end}} </p>
                 <div class="source">
                     <img class="icon-group" src="img/icon-group-34.png" />
                     <div class="source-name">Scanlation group{{/*<Scanlation-group>*/}}</div>
