--- a/assets/css/manga.scss
+++ b/assets/css/manga.scss
@@ -31,16 +31,20 @@
       justify-content: flex-end;
       align-items: center;
       width: 60%;
+      height: calc(100% - 24px);
 
       .manga-title {
-        width: fit-content;
+        width: 90%;
         text-align: center;
         font-family: "Tilt Neon", sans-serif;
         font-weight: 400;
         color: $font-color;
-        font-size: calc(2rem + 2vw);
+        font-size: calc(25px + 1.5vw);
         letter-spacing: 0;
         line-height: normal;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
       .manga-attributes {
         display: flex;
@@ -70,6 +74,9 @@
             line-height: normal;
           }
           .rating-tag {
+            display: flex;
+            gap: calc(3px + .3vw);
+
             img.icon-star-outline {
               width: calc(1rem + 1vw);
               height: calc(1rem + 1vw);
@@ -82,17 +89,16 @@
             gap: calc(8px + .4vw);
             padding: calc(3px + .2vw) calc(8px + .4vw);
             border-radius: calc(5px + .4vw);
-
-            .attr-text {
-              width: fit-content;
-              text-align: center;
-              font-family: "Tilt Neon", sans-serif;
-              font-weight: 400;
-              color: $font-color;
-              font-size: calc(14px + .8vw);
-              letter-spacing: 0;
-              line-height: normal;
-            }
+          }
+          .attr-text {
+            width: fit-content;
+            text-align: center;
+            font-family: "Tilt Neon", sans-serif;
+            font-weight: 400;
+            color: $font-color;
+            font-size: calc(14px + .8vw);
+            letter-spacing: 0;
+            line-height: normal;
           }
         }
       }
@@ -140,6 +146,7 @@
     top: calc(1.5rem + 1.5vw);
     right: 0;
     width: calc(100% - calc(calc(1.5rem + 1.5vw) * 2));
+    height: 500px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -150,7 +157,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: calc(180px + 14vw);
+      width: calc(100px + 18vw);
       aspect-ratio: 12/16;
       padding: calc(10px + .5vw);
       border-radius: calc(7px + .4vw);
@@ -158,11 +165,12 @@
       background-color: $font-color;
       box-shadow: 0 12px 12px 7px #00000040;
 
-      img.manga-card-img {
-        max-height: 100%;
-        max-width: 100%;
-        object-position: center;
-        object-fit: cover;
+      .manga-card-img {
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
         border-radius: calc(4px + .3vw);
       }
     }
@@ -186,7 +194,7 @@
         font-family: "Tilt Neon", sans-serif;
         font-weight: 400;
         color: $font-color;
-        font-size: calc(13px + .3vw);
+        font-size: calc(14px + .4vw);
         text-align: justify;
       }
       .manga-tag-list {
@@ -200,7 +208,7 @@
 
         .manga-tag {
           display: flex;
-          padding: calc(2px + .1vw) calc(5px + .2vw);
+          padding: calc(3px + .2vw) calc(5px + .3vw);
           background-color: $foreground;
           border-radius: calc(3px + .2vw);
           align-items: center;
@@ -210,7 +218,7 @@
             font-family: "Tilt Neon", sans-serif;
             font-weight: 400;
             color: $font-color;
-            font-size: calc(9px + .3vw);
+            font-size: calc(12px + .4vw);
             text-align: center;
             letter-spacing: 0;
             line-height: normal;
@@ -231,12 +239,11 @@
   .chapters-header {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: flex-end;
     width: 100%;
 
     .title-ctn {
       display: flex;
-      align-items: center;
       gap: 10px;
       padding: 0 10px;
       background-color: $foreground;
@@ -258,7 +265,7 @@
       align-items: center;
       justify-content: center;
       gap: 20px;
-      padding: 10px 0;
+      padding: 10px;
 
       .sort-title {
         width: 100px;
@@ -307,19 +314,20 @@
     overflow-y: auto;
     overflow-x: hidden;
 
-    &:nth-child(even) {
-      background-color: $bright-foreground;
-    }
     .chapter {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      width: 100%;
+      width: calc(100% - 40px);
       height: 50px;
       padding: 3px 20px;
 
+      &:nth-child(even) {
+        background-color: $bright-foreground;
+      }
       p.chapter-title {
-        flex: 2 0 auto;
+        flex: 1 0 auto;
+        width: 12vw;
         font-family: "Tilt Neon", sans-serif;
         font-weight: 400;
         color: $font-color;
@@ -328,7 +336,7 @@
         line-height: normal;
       }
       .source {
-        flex: 1 1 content;
+        flex: 1 1 auto;
         display: flex;
         align-items: center;
         gap: 7px;
@@ -338,10 +346,9 @@
           height: 37px;
         }
         .source-name {
-          width: fit-content;
+          width: 12vw;
           font-family: "Tilt Neon", sans-serif;
           font-weight: 400;
-          text-align: center;
           color: $font-color;
           font-size: 18px;
           letter-spacing: 0;
