--- a/templates/principal.gohtml
+++ b/templates/principal.gohtml
@@ -20,7 +20,7 @@
       {{end}}
     </div>
     <div class="banner-buttons">
-      <a href="/chapter/{{.Banner.FirstChapterId}}"><div class="read-btn"><div class="banner-btn-text">Read Now</div></div></a>
+      <a href="/chapter/{{.Banner.Id}}/1/{{.Banner.FirstChapterId}}"><div class="read-btn"><div class="banner-btn-text">Read Now</div></div></a>
       <a href="/manga/{{.Banner.Id}}"><div class="info-btn"><div class="banner-btn-text">View Info</div></div></a>
     </div>
   </div>
@@ -47,7 +47,7 @@
             {{end}}
           </div>
           <div class="hover-buttons">
-            <a href="/chapter/{{.FirstChapterId}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
+            <a href="/chapter/{{.Id}}/1/{{.FirstChapterId}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
             <a href="/manga/{{.Id}}" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
           </div>
         </div>
@@ -79,7 +79,7 @@
             {{end}}
           </div>
           <div class="hover-buttons">
-            <a href="/chapter/{{.FirstChapterId}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
+            <a href="/chapter/{{.Id}}/1/{{.FirstChapterId}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
             <a href="/manga/{{.Id}}" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
           </div>
         </div>
