--- a/assets/css/miscellaneous.css
+++ b/assets/css/miscellaneous.css
@@ -257,6 +257,32 @@ body {
   background-position: 50% 50%;
 }
 
+.chapter-scan-list {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  height: fit-content;
+}
+.chapter-scan-list img.chapter-scan {
+  object-fit: contain;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+.pagination .page-link {
+  width: fit-content;
+  font-family: "Tilt Neon", sans-serif;
+  font-weight: 400;
+  color: #EEEEEE;
+  font-size: calc(18px + 3vw);
+  text-align: center;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
 .ctn {
   display: flex;
   align-items: center;
