Manga page pagination and chapter page.

--- a/assets/css/manga.css
+++ b/assets/css/manga.css
@@ -394,7 +394,7 @@ body {
 .manga-presentation .manga-card-ctn-abs {
   position: absolute;
   top: calc(1.5rem + 1.5vw);
-  right: 0;
+  right: calc(1rem + 2.5vw);
   width: calc(100% - (1.5rem + 1.5vw) * 2);
   height: 500px;
   display: flex;
@@ -599,6 +599,30 @@ body {
 }
 .manga-chapters .chapters-list .chapter a.chapter-link img.icon-menu-book {
   width: 44px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  width: fit-content;
+  height: fit-content;
+  padding: 10px 20px;
+  border-radius: 8px;
+  background-color: #393E46;
+}
+.pagination .page-link {
+  width: fit-content;
+  font-family: "Tilt Neon", sans-serif;
+  font-weight: 400;
+  color: #EEEEEE;
+  font-size: calc(14px + 0.5vw);
+  text-align: center;
+  letter-spacing: 0;
+  line-height: normal;
+}
+.pagination span.page-link {
+  color: #00ADB5;
 }
 
 /*# sourceMappingURL=manga.css.map */
