--- a/templates/base.gohtml
+++ b/templates/base.gohtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{template "staticPath" .}}/css/base.css" />
     <link rel="stylesheet" href="{{template "staticPath" .}}/css/{{template "cssFile" .}}.css" />
+    <link rel="icon" type="image/png" href="{{template "staticPath" .}}/img/logo-solo-transparent.png">
     <title>{{template "title" .}}</title>
 </head>
 <body>
