--- a/templates/principal.gohtml
+++ b/templates/principal.gohtml
@@ -21,7 +21,7 @@
     </div>
     <div class="banner-buttons">
       <a href="/chapter/{{.Banner.Id}}/1/{{.Banner.FirstChapterId}}"><div class="read-btn"><div class="banner-btn-text">Read Now</div></div></a>
-      <a href="/manga/{{.Banner.Id}}"><div class="info-btn"><div class="banner-btn-text">View Info</div></div></a>
+      <a href="/manga/{{.Banner.Id}}?order=desc&pag=1"><div class="info-btn"><div class="banner-btn-text">View Info</div></div></a>
     </div>
   </div>
   <div class="banner-card"><img class="banner-cover" src="/covers/{{.Banner.Id}}/{{.Banner.CoverImg}}.512.jpg" alt="{{.Banner.Title}}" /></div>
@@ -48,7 +48,7 @@
           </div>
           <div class="hover-buttons">
             <a href="/chapter/{{.Id}}/1/{{.FirstChapterId}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
-            <a href="/manga/{{.Id}}" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
+            <a href="/manga/{{.Id}}?order=desc&pag=1" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
           </div>
         </div>
         <div class="category-card-info"><div class="category-card-title">{{.Title}}</div></div>
@@ -80,7 +80,7 @@
           </div>
           <div class="hover-buttons">
             <a href="/chapter/{{.Id}}/1/{{.FirstChapterId}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
-            <a href="/manga/{{.Id}}" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
+            <a href="/manga/{{.Id}}?order=desc&pag=1" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
           </div>
         </div>
         <div class="category-card-info"><div class="category-card-title">{{.Title}}</div></div>
