--- a/templates/base.gohtml
+++ b/templates/base.gohtml
@@ -12,11 +12,11 @@
 <body>
 <header class="header">
     <div class="main">
-        <img class="logo" src="{{template "staticPath" .}}/img/header-logo-1.png" alt="logo" />
+        <a href="/principal" class="logo-link"><img class="logo" src="{{template "staticPath" .}}/img/header-logo-1.png" alt="logo" /></a>
         <div class="header-nav">
             <div class="category-link">LATEST UPDATES</div>
             <div class="category-link">POPULAR</div>
-            <div class="category-link">CATEGORIES</div>
+            <a href="/categories" class="category-link">CATEGORIES</a>
         </div>
         <div class="header-search-bar-ctn">
             <div class="header-search-bar">
