--- a/assets/css/manga.scss
+++ b/assets/css/manga.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin-top: 75px;
 
   .manga-banner {
     position: relative;
@@ -32,6 +33,7 @@
       align-items: center;
       width: 60%;
       height: calc(100% - 24px);
+      z-index: 2;
 
       .manga-title {
         width: 90%;
@@ -180,6 +182,9 @@
     flex-direction: column;
     align-items: flex-start;
     gap: calc(8px + .4vw);
+    height: fit-content;
+    min-height: calc(.75 * (150px + 18vw));
+    z-index: 2;
 
     .manga-description {
       display: flex;
